helloworld/manifests/sh-service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-lb
  labels:
    app: hello-lb
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8000
  selector:
    app: hello
    tier: web
